# ethercat-types

./: Cargo.toml  README.md
src/: lib.rs  value.rs
