[package]
name = "ethercat-types"
description = "Common EtherCAT data structures"
version = "0.1.0"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["ethercat", "fieldbus"]
homepage = "https://github.com/ethercat-rs/ethercat-types"
repository = "https://github.com/ethercat-rs/ethercat-types"
edition = "2018"

[dependencies]

[badges]
maintenance = { status = "actively-developed" }
