[package]
name = "ethercat-types"
description = "Common EtherCAT data structures"
version = "0.3.5"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["ethercat", "fieldbus"]
homepage = "https://github.com/ethercat-rs/ethercat-types"
repository = "https://github.com/ethercat-rs/ethercat-types"
edition = "2018"

[dependencies]
num-derive = "0.3"
num-traits = "0.2"

[badges]
maintenance = { status = "actively-developed" }
